# BadgeEditorQt

./: .gitignore  Agents.md  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  GLOSSARY.md  MILESTONES.md  ROADMAP.md  SPEC.md  appicon.rc  appsettingsdialog.cpp  appsettingsdialog.h  badge.document.ixx  badge.documentio.ixx  badge.event.ixx  badge.imageio.ixx  badge.layout.ixx  badge.model.h  badge.model.ixx  badge.paper.h  badge.paper.ixx  badge.qtbridge.ixx  badgegraphicitem.cpp  badgegraphicitem.h  badgeitem.cpp  badgeitem.h  badgeitem.ixx  batchlayoutdialog.cpp  batchlayoutdialog.h  constants.h  constants.ixx  designerwidget.cpp  designerwidget.h  dockstylemanager.cpp  dockstylemanager.h  exportdialog.cpp  exportdialog.h  guideitem.cpp  guideitem.h  guideitem.ixx  (+29 more)
docs/: custom-layout-send-dialog.md  frozen-features.md  layout-transfer-spec.md  mixed-size-layout-plan.md  priority-feature-tasklist.md
tools/: generate_app_icon.py
